test/parser/literals/invalid_hex_int.exp
Error: Unexpected token `G`, expected `;`
test/parser/literals/invalid_hex_int.myte:4:6
 4 |   0xFFG;
   |       ^