test/parser/literals/invalid_hex_int.myte
module test

fun main() {
  0xFFG;
}